--- a/index.html
+++ b/index.html
@@ -1,119 +1,149 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <link rel="stylesheet" href="css/fontawesome-free-5.15.4-web/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="icons/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Source+Sans+Pro:wght@600&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css">
 </head>
 
+
+
 <body>
-    <section class="client-reviews p-5">
-        <div class="container text-center">
-            <div class="parent-item">
-            <div class="item d-flex justify-content-center align-items-center position-relative">
-                <h3 class="position-absolute">c</h3>
-                <h2 class="fw-bolder fs-2">Client Reviews</h2>
-            </div>
-            <p class="py-3 w-75 m-auto">
-                Donec purus est, tincidunt eu sodales quis, vehicula quis enim. Morbi dapibus, tellus a gravida faucibus, elit ipsum sollicitudin risus, id ultricies arcu neque eget velit.
-            </p>
-            </div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators position-static d-flex align-items-center">
 
-                    <div class="indicator-item">
-                        <img type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class=" rounded-circle" aria-current="true" aria-label="Slide 1" src="imgs/client-1.png"
-                            alt="" srcset="">
-                        <div class="client-info">
-                            <h3>Hugh Tace</h3>
-                            <span>From Capital</span>
-                        </div>
-                    </div>
-                    <div class="indicator-item">
-                        <img type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            class="rounded-circle" aria-current="true" aria-label="Slide 2" src="imgs/client-2.png"
-                            alt="" srcset="">
-                        <div class="client-info">
-                            <h3>Hugh Tace</h3>
-                            <span>From Capital</span>
-                        </div>
-                    </div>
-                    <div class="indicator-item">
-                        <img type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            class="rounded-circle active" aria-current="true" aria-label="Slide 3"
-                            src="imgs/client-3.png" alt="" srcset="">
-                        <div class="client-info">
-                            <h3>Hugh Tace</h3>
-                            <span>From Capital</span>
-                        </div>
-                    </div>
-                    <div class="indicator-item">
-                        <img type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                            class="rounded-circle" aria-current="true" aria-label="Slide 4" src="imgs/client-4.png"
-                            alt="" srcset="">
-                        <div class="client-info">
-                            <h3>Hugh Tace</h3>
-                            <span>From Capital</span>
-                        </div>
-                    </div>
-                    <div class="indicator-item">
-                        <img type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                            class="rounded-circle" aria-current="true" aria-label="Slide 5" src="imgs/client-5.png"
-                            alt="" srcset="">
-                        <div class="client-info">
-                            <h3>Hugh Tace</h3>
-                            <span>From Capital</span>
-                        </div>
-                    </div>
 
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <div class="single-box">
-                            <p><i class="fas fa-quote-left"></i> Aenean sit amet est orci. Aenean at nisi eget nulla
-                                lobortis commodo. Nam eget lorem in ex aliquam dapibus. <i
-                                    class="fas fa-quote-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="single-box">
-                            <p><i class="fas fa-quote-left"></i> Aenean sit amet est orci. Aenean at nisi eget nulla
-                                lobortis commodo. Nam eget lorem in ex aliquam dapibus. <i
-                                    class="fas fa-quote-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="carousel-item active">
-                        <div class="single-box">
-                            <p><i class="fas fa-quote-left"></i> Aenean sit amet est orci. Aenean at nisi eget nulla
-                                lobortis commodo. Nam eget lorem in ex aliquam dapibus. <i
-                                    class="fas fa-quote-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="single-box">
-                            <p><i class="fas fa-quote-left"></i> Aenean sit amet est orci. Aenean at nisi eget nulla
-                                lobortis commodo. Nam eget lorem in ex aliquam dapibus. <i
-                                    class="fas fa-quote-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="single-box">
-                            <p><i class="fas fa-quote-left"></i> Aenean sit amet est orci. Aenean at nisi eget nulla
-                                lobortis commodo. Nam eget lorem in ex aliquam dapibus. <i
-                                    class="fas fa-quote-right"></i></p>
-                        </div>
-                    </div>
-                </div>
+
+
+    <!-- Start Footer -->
+
+    <div class="footer-icon">
+        <img src="images/icon.png">
+    </div>
+
+
+
+    <div class="footer-info">
+
+        <div>
+
+            <h5>Contact Info</h5>
+
+            <div>
+                <p>1650 Lombard Street<br>
+                    San Francisco, CA 94123</p>
+                <p>+1 (415) 876-3250<br>
+                    [email protected]
+
+                </p>
             </div>
+
         </div>
-    </section>
-    <script src="js/bootstrap.bundle.min.js"></script>
+
+
+
+        <div>
+            <h5>Useful Links</h5>
+
+
+            <ul>
+                <li> <a href="#">Support</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li> <a href="#">Terms & Conditions</a></li>
+                <li> <a href="#">Affiliate Program</a></li>
+                <li> <a href="#">Careers</a></li>
+            </ul>
+
+        </div>
+
+
+
+
+
+        <div>
+            <h5>Recent Posts</h5>
+
+            <ul>
+                <li><a href="#">Sunset in Venice</a></li>
+                <li><a href="#">Aerial View of Village</a></li>
+                <li><a href="#">Lighted Concrete City</a></li>
+                <li><a href="#">The Little Ghost</a></li>
+                <li><a href="#">Royal Oats ft. Waldo</a></li>
+
+            </ul>
+
+        </div>
+
+
+
+        <div>
+
+            <h5>Popular Tags</h5>
+
+            <div>
+
+
+                <a class="tags" href="#">HTML5</a>
+                <a class="tags" href="#">CSS3</a>
+                <a class="tags" href="#">JQuery</a> <br>
+                <a class="tags" href="#">ux / ui</a>
+                <a class="tags" href="#">Web</a>
+                <a class="tags" href="#">Graphic</a> <br>
+                <a class="tags" href="#">Design</a>
+                <a class="tags" href="#">Development</a>
+
+            </div>
+
+        </div>
+
+
+
+    </div>
+
+    <!-- End Footer -->
+
+
+    <!-- Start Bottom Page -->
+
+
+    <div class="bottom-page">
+
+
+        <div class="bottom-social-icons">
+
+            <a href="#"> <i class="fab fa-twitter"> </i> </a>
+            <a href="#"> <i class="fab fa-facebook-f "> </i> </a>
+            <a href="#"> <i class="fab fa-instagram "> </i> </a>
+            <a href=""> <i class="fab fa-dribbble"></i> </a>
+            <a href="#"><i class="fab fa-pinterest"></i></a>
+
+        </div>
+
+
+
+        <div>
+
+
+            <p class="copyright">Copyright © 2020
+                <a href="#">Angora</a>
+            </p>
+
+        </div>
+
+
+    </div>
+
+
+
+
+    <!-- End Bottom Page -->
+
+
 </body>
 
 </html>
